--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -143,7 +143,7 @@
 #main_body .date_scroll .date_group span {
   border: 1px solid #ececec;
   border-radius: 1rem;
-  padding:1rem;
+  padding:0.5rem 1rem 0.5rem 1rem;
   line-height:1.4rem;
   display: inline-block;       
   align-items: center;        
