--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -118,9 +118,9 @@
 }
 
 #main_body .date_scroll {
-  background-color: #fff;
+  /*background-color: #fff;*/
   padding:0.5rem 1rem 1rem 1rem;
-  border-bottom: 1px solid #ececec;
+  /*border-bottom: 1px solid #ececec;*/
 }
 
 #main_body .date_scroll .date_group {
