--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -112,18 +112,20 @@
   gap:1.5rem
 }
 
+
 #main_body {
   flex-grow: 1;
   overflow-y: auto;
   -webkit-overflow-scrolling: touch;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 #main_body .no_data {
-  font-size:1.6rem;
-  line-height:1.6rem;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  border:1px solid red;
 }
 
 #main_body .no_data span {
