--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -120,6 +120,7 @@
 }
 
 #main_body .no_data {
+  width:80%;
   position: fixed;
   top: 50%;
   left: 50%;
@@ -131,8 +132,9 @@
   line-height:1.6rem;
   background-image: url('../images/ico_crying.png');
   background-repeat: no-repeat;
-  background-size: 2rem 2rem;
+  background-size: 5rem 5rem;
   background-position: top center;
+  font-family:"S-CoreDream-3Light"
 }
 
 #main_body .no_data span {
