--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -133,7 +133,8 @@
   background-repeat: no-repeat;
   background-size: 5rem 5rem;
   background-position: top center;
-  font-family:"S-CoreDream-3Light"
+  font-family:"S-CoreDream-4Regular";
+  padding-top:7rem;
 }
 
 #main_body .no_data span {
