--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -113,7 +113,7 @@ h1 {
 }
 
 h2 {
-  font-family: 'S-CoreDream-5Regular';
+  font-family: 'S-CoreDream-6Bold';
   font-size:2rem;
   line-height:2.3rem;
 }
