--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -128,12 +128,12 @@
   text-align: center;
   font-size:1.4rem;
   font-weight:bold;
-  line-height:1.6rem;
+  line-height:1.7rem;
   background-image: url('../images/ico_crying.png');
   background-repeat: no-repeat;
   background-size: 5rem 5rem;
   background-position: top center;
-  font-family:"S-CoreDream-5Regular";
+  font-family:'S-CoreDream-5Regular';
   padding-top:6rem;
 }
 
