--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -55,7 +55,7 @@
 
 html, body {
   height: 100%;
-  font-family: 'S-CoreDream-4Light',/*'SUIT-Regular',*/ 'Apple SD Gothic Neo', sans-serif;
+  font-family: 'S-CoreDream-4Regular',/*'SUIT-Regular',*/ 'Apple SD Gothic Neo', sans-serif;
   font-size: 1rem;
   line-height: 1.4rem;
   color: #333;
