--- a/src/assets/css/ar_popup.css
+++ b/src/assets/css/ar_popup.css
@@ -19,16 +19,16 @@
 	top:0;
 	left:0;
 	text-align:right;
-	padding:1rem 1rem 0 0
+	padding:0.5rem 0.5rem 0 0
 }
 
 
 .close_btn {
-	width:2rem;
-	height:2rem;
+	width:2.5rem;
+	height:2.5rem;
 	border-radius:50%;
 	display: inline-block;
-	background:url('@/assets/images/ico_close.png') no-repeat 0 0/cover;
+	background:url('../images/ico_close.png') no-repeat 0 0/cover;
 }
 
 .close_btn span {
@@ -69,7 +69,7 @@
 }
 
 .popup_wrap .popup_tit p {
-  font-size:1rem;
+  font-size:1.2rem;
 	line-height:1.4rem;
 	color:#666;
 	font-weight:300;
@@ -77,7 +77,7 @@
 }
 
 .popup_wrap h3 {
-	font-size:1rem;
+	font-size:1.1rem;
 	margin:2rem 0 1rem 0;
 }
 
