--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -113,7 +113,7 @@ h2 {
 }
 
 h3 {
-  font-family: 'S-CoreDream-6Bold';
+  font-family: 'S-CoreDream-5Regular';
 }
 
 img, picture, video, canvas, svg {
