--- a/src/assets/css/ar_popup.css
+++ b/src/assets/css/ar_popup.css
@@ -69,8 +69,8 @@
 }
 
 .popup_wrap .popup_tit p {
-  font-size:1.1rem!important;
-	line-height:1.4rem!important;
+  font-size:1.1rem;
+	line-height:1.5rem;
 	color:#666;
 	margin-top:0.7rem;
 }
