--- a/src/assets/css/ar_popup.css
+++ b/src/assets/css/ar_popup.css
@@ -328,3 +328,10 @@
 .monthly-grid span.m_s_btn.light {
   font-weight:bold
 }
+
+.off_walk {
+  font-size:0.9rem;
+  margin:1rem 0 -0.5rem 0
+  display: flex;
+  justify-content: flex-end;
+}
