--- a/src/assets/css/ar_popup.css
+++ b/src/assets/css/ar_popup.css
@@ -331,7 +331,7 @@
 
 .off_walk {
   font-size:0.9rem;
-  margin:1rem 0 -0.5rem 0
+  margin:1rem 0 -0.5rem 0;
   display: flex;
   justify-content: flex-end;
 }
