--- a/src/assets/css/ar_popup.css
+++ b/src/assets/css/ar_popup.css
@@ -335,11 +335,12 @@
   margin:1rem 0 -1rem 0;
   display: flex;
   justify-content: flex-end;
+  text-align:right;
 }
 
 .off_walk .checkbox-label {
   width:auto;
-  display: inline-flex;
+  display: inline-block;
   align-items: center;
   gap: 0.4rem;
 }
