--- a/src/assets/css/ar_popup.css
+++ b/src/assets/css/ar_popup.css
@@ -333,7 +333,7 @@
   width:100%;
   font-size:0.9rem;
   margin:1rem 0 -1rem 0;
-  text-align:right;
+  text-align:right!important;
   background-color:green;
 }
 
