--- a/src/assets/css/ar_popup.css
+++ b/src/assets/css/ar_popup.css
@@ -335,6 +335,7 @@
   justify-content: flex-end;
   font-size: 0.9rem;
   margin: 1rem 0 -1rem 0;
+  text-align:right!important;
   background-color: green;
 }
 
