--- a/src/assets/css/ar_popup.css
+++ b/src/assets/css/ar_popup.css
@@ -330,18 +330,20 @@
 }
 
 .off_walk {
-  width: 100%;
-  display: flex;
-  justify-content: flex-end;
-  font-size: 0.9rem;
-  margin: 1rem 0 -1rem 0;
-  text-align:right!important;
-  background-color: green;
+  width: 100% !important;
+  display: flex !important;
+  justify-content: flex-end !important;
+  align-items: center !important;
+  font-size: 0.9rem !important;
+  margin: 1rem 0 -1rem 0 !important;
+  background-color: green !important;
 }
 
 .off_walk .checkbox-label {
-  display: flex;
-  align-items: center;
-  gap: 0.4rem;
-  background-color: red;
+  display: flex !important;
+  flex-shrink: 0 !important;
+  align-items: center !important;
+  justify-content: flex-end !important;
+  background-color: red !important;
+  margin-left: auto !important; /* 이걸 추가로 줘야 진짜 오른쪽 붙음 */
 }
