--- a/src/assets/css/ar_popup.css
+++ b/src/assets/css/ar_popup.css
@@ -333,13 +333,11 @@
   width: 100% !important;
   display: block !important;
   text-align: right !important;
-  margin: 1rem 0 -1rem 0 !important;
-  background-color: green !important;
+  margin: 1rem 0 -1rem 0
 }
 
 .off_walk .checkbox-label {
   display: inline-flex !important;
   align-items: center !important;
-  gap: 0.4rem !important;
-  background-color: red !important;
+  gap: 0.4rem
 }
