--- a/src/assets/css/ar_popup.css
+++ b/src/assets/css/ar_popup.css
@@ -330,14 +330,15 @@
 }
 
 .off_walk {
-  width: 100% !important;
-  display: block !important;
-  text-align: right !important;
-  margin: 1rem 0 -1rem 0
+  width: 100%;
+  background-color:#fafafa;
+  border-radius:1rem;
+  padding:0.5rem;
+  border-color:1px solid #ececec;
+  margin: 1rem 0 -1rem 0;
+  text-align:center;
 }
 
 .off_walk .checkbox-label {
-  display: inline-flex !important;
-  align-items: center !important;
-  gap: 0.4rem
+  
 }
