--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -54,7 +54,7 @@
   display: flex;
   align-items: center;
   justify-content: center; 
-  font-family:'S-CoreDream-4Light';
+  font-family:'S-CoreDream-4Regular';
 }
 
 #header .title p span {
