--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -71,3 +71,8 @@
   background-color:#fff!important;
   border:1px solid #333
 }
+
+#main_body .routine_total {
+  border-radius:1.5rem;
+  padding:1rem;
+}
