--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   overflow: hidden;
-  background-color: #fafafa;
+  background-color: #fff;
 }
  
 #main_wrap button {
@@ -21,7 +21,7 @@
   padding:1rem; 
   box-sizing: border-box;
   background-color:#fff;
-  border-bottom: 1px solid #ececec;
+  /*border-bottom: 1px solid #ececec;*/
 }
 
 #header .left,
