--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -13,6 +13,7 @@
   background-position: top center;
   font-family:'S-CoreDream-6Bold';
   padding-top:6rem
+  border:1px solid red
 }
 
 #main_body .no_data span {
@@ -24,7 +25,7 @@
 }
 
 #main_body .date_scroll {
-  
+  border:1pz solid red
 }
 
 #main_body .date_scroll .date_group {
@@ -73,6 +74,8 @@
 }
 
 #main_body .routine_total {
+  width:100%;
+  border:1px solid red;
   border-radius:1.5rem;
   padding:1rem;
 }
