--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -12,7 +12,7 @@
   background-size: 5rem 5rem;
   background-position: top center;
   font-family:'S-CoreDream-6Bold';
-  padding-top:6rem
+  padding-top:6rem;
   border:1px solid red
 }
 
