--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   overflow: hidden;
-  background-color: #fff;
+  background-color:red;
 }
  
 #main_wrap button {
