--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -3,7 +3,6 @@
   display: flex;
   flex-direction: column;
   overflow: hidden;
-  background-color:red;
 }
  
 #main_wrap button {
@@ -117,7 +116,7 @@
   flex-grow: 1;
   overflow-y: auto;
   -webkit-overflow-scrolling: touch;
-  padding:1rem 2rem 2rem 1rem;
+  padding:0 2rem 2rem 2rem;
 }
 
 button.lnb {
