--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -74,6 +74,9 @@
   justify-content: space-between;
   align-items: center;
   margin-top:1rem;
+  font-size:0.8rem;
+  letter-spacing:-0.02rem;
+  line-height:1rem;
 }
 
 #main_body .routine_total p span {
