--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -69,16 +69,20 @@
   border:1px solid #333
 }
 
+#main_body .routine_total {
+  background-color:#f5f5f5;
+  padding:0.5rem;
+  border-radius:1.5rem;
+  margin-top:1rem;
+}
+
 #main_body .routine_total p {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-top:1rem;
+  font-size:0.9rem;
   letter-spacing:-0.02rem;
   line-height:1.2rem;
-  background-color:#f5f5f5;
-  padding:0.5rem;
-  border-radius:1.5rem;
 }
 
 #main_body .routine_total p span {
@@ -87,10 +91,9 @@
 }
 
 #main_body .routine_total p button {
-  line-height:1.2rem;
   background-color:#fff;
   border:1px solid #333;
-  padding:0 0.5rem 0 0.5rem;
+  padding:0.5rem;
   display:flex;
-  gap:0.1rem
+  gap:0.5rem
 }
