--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -71,18 +71,20 @@
 
 #main_body .routine_total {
   background-color:#f5f5f5;
-  padding:0.5rem;
+  padding:1rem;
   border-radius:1.5rem;
   margin-top:1rem;
+  font-size:0.8rem;
+  letter-spacing:-0.02rem;
+  line-height:1rem;
 }
 
 #main_body .routine_total p {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  font-size:0.9rem;
-  letter-spacing:-0.02rem;
-  line-height:1.2rem;
+  margin:0;
+  padding:0;
 }
 
 #main_body .routine_total p span {
@@ -94,6 +96,9 @@
   background-color:#fff;
   border:1px solid #333;
   padding:0.5rem;
+  border-radius:0.5rem;
   display:flex;
+  align-items:center;
+  line-height:1rem;
   gap:0.5rem
 }
