--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -70,21 +70,16 @@
 }
 
 #main_body .routine_total {
+}
+
+#main_body .routine_total p:first-child {
   background-color:#f5f5f5;
   padding:1rem;
   border-radius:1.5rem;
-  margin-top:1rem;
+  margin:1rem 0 1rem 0;
   font-size:0.8rem;
   letter-spacing:-0.02rem;
   line-height:1rem;
-}
-
-#main_body .routine_total p {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin:0;
-  padding:0;
 }
 
 #main_body .routine_total p span {
@@ -92,13 +87,13 @@
   align-items: center;
 }
 
-#main_body .routine_total p button {
+#main_body .routine_total p:last-child button {
   background-color:#fff;
   border:1px solid #333;
   padding:0.5rem;
-  border-radius:0.5rem;
+  border-radius:1rem;
   display:flex;
   align-items:center;
-  line-height:1rem;
-  gap:0.5rem
+  line-height:0.9rem;
+  margin-left:0.5rem;
 }
