--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -73,13 +73,22 @@
 }
 
 #main_body .routine_total p:first-child {
-  background-color:#f5f5f5;
+  background-color:#fff;
+  border:1px solid #eaeaea;
   padding:1rem;
   border-radius:1.5rem;
-  margin:1rem 0 1rem 0;
-  font-size:0.8rem;
+  margin:1rem 0;
   letter-spacing:-0.02rem;
   line-height:1rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#main_body .routine_total p span {
+  display: flex;
+  align-items: center;
+  gap: 0.3rem; /* 텍스트와 숫자 사이 간격 */
 }
 
 #main_body .routine_total p span {
