--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -70,7 +70,7 @@
 }
 
 #main_body .date_scroll .date_group span.today {
-  background-color:#52ff62
+  background-color:#52ff62;
   border:1px solid #00ce00;
 }
 
