--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -70,8 +70,9 @@
 }
 
 #main_body .date_scroll .date_group span.today {
-  background-color:#52ff62;
+  background-color:#8bff96!important;
   border:1px solid #00ce00;
+  color:#333!important;
 }
 
 #main_body .routine_total {
@@ -133,6 +134,6 @@
   font-weight:bold;
   padding:0 0.3rem 0 0.3rem;
   border-radius:1rem;
-  background-color:#ffde00;
+  background-color:#ff4b8;
   border:1px solid #ffc600;
 }
