--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -144,6 +144,6 @@
   font-weight:bold;
   padding:0 0.3rem 0 0.3rem;
   border-radius:1rem;
-  background-color:#fff4b8;
+  background-color:#ffde00;
   border:1px solid #ffc600;
 }
