--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -101,6 +101,9 @@
 
 #main_body .routine_total p span a {
   display: inline-block;
+  width:5rem;
+  height:2rem;
+  margin-right:0.2rem
 }
 
 #main_body .routine_total p span a strong {
