--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -52,7 +52,8 @@
   display: none;
 }
 
-#main_body .date_scroll .date_group span {
+#main_body .date_scroll .date_group span,
+#main_body .date_fixed_today span {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -73,14 +74,15 @@
   font-size:0.6rem;
 }
 
-#main_body .date_scroll .date_group span.on {
+#main_body .date_scroll .date_group span.on,
+#main_body .date_fixed_today span.on {
   color:#333!important;
   font-weight:bold;
   background-color:#fff!important;
   border:1px solid #333
 }
 
-#main_body .date_scroll .date_group span.today {
+#main_body .date_fixed_today span.today {
   border:1px solid #00ce00;
 }
 
