--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -32,8 +32,8 @@
   flex-shrink: 0;
   position: sticky;
   left: 0;
-  background: #fff;
   z-index: 10;
+  margin-right:0.2rem;
 }
 
 #main_body .date_scroll .date_group {
@@ -66,7 +66,8 @@
   color: #999;
   box-sizing: border-box;
 }
-#main_body .date_scroll .date_group i {
+#main_body .date_scroll .date_group i,
+#main_body .date_fixed_today i {
   display:block;
   color:#666;
   line-height:0.8rem;
