--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -180,6 +180,8 @@
   text-align:left;
 }
 
-#main_body .routine_card .rc_inner {
-  
+#main_body .routine_card .rc_inner span[class^='color'] {
+  width:2rem;
+  height:2rem;
+  border:1px solid red;
 }
