--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -180,8 +180,14 @@
   text-align:left;
 }
 
+#main_body .routine_card .rc_inner {
+  display: flex;
+  align-items: center;
+}
+
 #main_body .routine_card .rc_inner span[class^='color'] {
   width:2rem;
   height:2rem;
-  border:1px solid red;
+  border-radius:50%;
+  margin-right:0.3rem;
 }
