--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -183,11 +183,12 @@
 #main_body .routine_card .rc_inner {
   display: flex;
   align-items: center;
+  min-hiehgt:3rem;
 }
 
 #main_body .routine_card .rc_inner span[class^='color'] {
-  width:1.5rem;
-  height:1.5rem;
+  width:1rem;
+  height:1rem;
   border-radius:50%;
   margin-right:0.3rem;
 }
