--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -182,24 +182,33 @@
 }
 
 #main_body .routine_card .rc_inner {
-  display: flex;
-  align-items: center;
-  min-height:3rem;
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
+  display: flex;
+  align-items: center;
   justify-content: space-between;
-  width:100%;
+  width: auto;
+  min-height: 3rem;
 }
 
+#main_body .routine_card .rc_inner .left,
 #main_body .routine_card .rc_inner .right {
-  width:80%;
-  background-color:red
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 #main_body .routine_card .rc_inner .left {
-  width:20%;
-  background-color:yellow
+  flex: 1;
+  background-color: yellow;
+  max-width: 90%;
+}
+
+#main_body .routine_card .rc_inner .right {
+  flex: 1;
+  background-color: red;
+  max-width: 10%;
 }
 #main_body .routine_card .rc_inner .right span[class^='color'] {
   width:1rem;
