--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -184,7 +184,6 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  gap: 1rem;
 }
 
 #main_body .routine_card .rc_inner .left,
@@ -195,23 +194,21 @@
 }
 
 #main_body .routine_card .rc_inner .left {
-  flex: 9;
-  background-color: yellow;
+  flex: 8;
 }
 
 #main_body .routine_card .rc_inner .right {
-  flex: 1;
-  background-color: red;
+  flex: 2;
 }
 
-#main_body .routine_card .rc_inner .right span[class^='color'] {
+#main_body .routine_card .rc_inner .left span[class^='color'] {
   width:1rem;
   height:1rem;
   border-radius:50%;
   margin-right:0.3rem;
 }
 
-#main_body .routine_card .rc_inner .right .title {
+#main_body .routine_card .rc_inner .left .title {
   font-weight:bold
 }
 
