--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -184,13 +184,14 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  gap:0.5rem
 }
 
 #main_body .routine_card .rc_inner .left,
 #main_body .routine_card .rc_inner .right {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
 }
 
 #main_body .routine_card .rc_inner .left {
