--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -182,7 +182,7 @@
 
 #main_body .routine_card .rc_inner {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: space-between;
   gap:0.5rem
 }
@@ -217,4 +217,9 @@
 
 #main_body .routine_card .rc_inner p {
   display:block
+}
+
+#main_body .routine_card .rc_inner .ruffys_item span 
+  width:3rem;
+  height:3rem;
 }
