--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -219,6 +219,11 @@
   display:block
 }
 
+#main_body .routine_card .rc_inner .right {
+  text-align:right;
+  background-color:yellow;
+}
+
 #main_body .routine_card .rc_inner .ruffys_item span {
   width:3rem;
   height:3rem;
