--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -192,6 +192,9 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  padding:0;
+  margin:0;
+  background-color:green;
 }
 
 #main_body .routine_card .rc_inner .left {
