--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -194,7 +194,6 @@
   justify-content: flex-start;
   padding:0;
   margin:0;
-  background-color:green;
 }
 
 #main_body .routine_card .rc_inner .left {
@@ -219,7 +218,21 @@
 }
 
 #main_body .routine_card .rc_inner p {
-  display:block
+  display:block;
+  padding-left:2.5rem
+}
+
+#main_body .routine_card .rc_inner p.term {
+  background: url('../images/ico_mark.png') no-repeat 0 0/1.5rem 1.5rem
+}
+#main_body .routine_card .rc_inner p.se_date {
+ background: url('../images/ico_calendar02.png') no-repeat 0 0/1.5rem 1.5rem
+}
+#main_body .routine_card .rc_inner p.alaram {
+ background: url('../images/ico_alaram.png') no-repeat 0 0/1.5rem 1.5rem
+}
+#main_body .routine_card .rc_inner p.comment {
+ background: url('../images/ico_comment.png') no-repeat 0 0/1.5rem 1.5rem
 }
 
 #main_body .routine_card .rc_inner .right {
