--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -219,20 +219,23 @@
 
 #main_body .routine_card .rc_inner p {
   display:block;
-  padding-left:2.5rem
+  padding-left:2rem
+}
+#main_body .routine_card .rc_inner p.title {
+  padding-left:0
 }
 
 #main_body .routine_card .rc_inner p.term {
-  background: url('../images/ico_mark.png') no-repeat 0 0/1.5rem 1.5rem
+  background: url('../images/ico_mark.png') no-repeat 0 0/0.5rem 0.5rem
 }
 #main_body .routine_card .rc_inner p.se_date {
- background: url('../images/ico_calendar02.png') no-repeat 0 0/1.5rem 1.5rem
+ background: url('../images/ico_calendar02.png') no-repeat 0 0/0.5rem 0.5rem
 }
 #main_body .routine_card .rc_inner p.alaram {
- background: url('../images/ico_alaram.png') no-repeat 0 0/1.5rem 1.5rem
+ background: url('../images/ico_alaram.png') no-repeat 0 0/0.5rem 0.5rem
 }
 #main_body .routine_card .rc_inner p.comment {
- background: url('../images/ico_comment.png') no-repeat 0 0/1.5rem 1.5rem
+ background: url('../images/ico_comment.png') no-repeat 0 0/0.5rem 0.5rem
 }
 
 #main_body .routine_card .rc_inner .right {
