--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -213,8 +213,8 @@
 
 #main_body .routine_card .rc_inner .left .title {
   font-weight:bold;
-  font-size:1.3rem;
-  line-height:1.5rem;
+  font-size:1.2rem;
+  line-height:1.4rem;
 }
 
 #main_body .routine_card .rc_inner p {
@@ -226,16 +226,16 @@
 }
 
 #main_body .routine_card .rc_inner p.term {
-  background: url('../images/ico_mark.png') no-repeat 0 0/0.5rem 0.5rem
+  background: url('../images/ico_mark.png') no-repeat 0 center/1rem 1rem
 }
 #main_body .routine_card .rc_inner p.se_date {
- background: url('../images/ico_calendar02.png') no-repeat 0 0/0.5rem 0.5rem
+ background: url('../images/ico_calendar02.png') no-repeat 0 center/1rem 1rem
 }
 #main_body .routine_card .rc_inner p.alaram {
- background: url('../images/ico_alaram.png') no-repeat 0 0/0.5rem 0.5rem
+ background: url('../images/ico_alaram.png') no-repeat 0 center/1rem 1rem
 }
 #main_body .routine_card .rc_inner p.comment {
- background: url('../images/ico_comment.png') no-repeat 0 0/0.5rem 0.5rem
+ background: url('../images/ico_comment.png') no-repeat 0 center/1rem 1rem
 }
 
 #main_body .routine_card .rc_inner .right {
