--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -215,6 +215,7 @@
   font-weight:bold;
   font-size:1.2rem;
   line-height:1.4rem;
+  margin-bottom:1rem;
 }
 
 #main_body .routine_card .rc_inner p {
