--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -230,7 +230,7 @@
   background: url('../images/ico_mark.png') no-repeat 0 center/1rem 1rem
 }
 #main_body .routine_card .rc_inner p.se_date {
- background: url('../images/ico_calendar.png') no-repeat 0 center/1rem 1rem
+ background: url('../images/ico_calendar02.png') no-repeat 0 center/1rem 1rem
 }
 #main_body .routine_card .rc_inner p.alaram {
  background: url('../images/ico_alaram.png') no-repeat 0 center/1rem 1rem
