--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -211,32 +211,33 @@
   margin-right:0.3rem;
 }
 
-#main_body .routine_card .rc_inner .left .title {
-  font-weight:bold;
-  font-size:1.2rem;
-  line-height:1.4rem;
-  margin-bottom:1rem;
-}
 
 #main_body .routine_card .rc_inner p {
   display:block;
-  padding-left:2rem
+  padding-left:2rem;
+  color:#666;
+  font-size:0.9rem;
+  letter-spacing:-0.02rem
 }
+
 #main_body .routine_card .rc_inner p.title {
+  font-weight:bold;
+  color:#333;
+  margin-bottom:1rem;
   padding-left:0
 }
 
 #main_body .routine_card .rc_inner p.term {
-  background: url('../images/ico_mark.png') no-repeat 0 0/1rem 1rem
+  background: url('../images/ico_mark.png') no-repeat 0 0/0.9rem 0.9rem
 }
 #main_body .routine_card .rc_inner p.se_date {
- background: url('../images/ico_calendar02.png') no-repeat 0 0/1rem 1rem
+ background: url('../images/ico_calendar02.png') no-repeat 0 0/0.9rem 0.9rem
 }
 #main_body .routine_card .rc_inner p.alaram {
- background: url('../images/ico_alaram.png') no-repeat 0 0/1rem 1rem
+ background: url('../images/ico_alaram.png') no-repeat 0 0/0.9rem 0.9rem
 }
 #main_body .routine_card .rc_inner p.comment {
- background: url('../images/ico_comment.png') no-repeat 0 0/1rem 1rem
+ background: url('../images/ico_comment.png') no-repeat 0 0/0.9rem 0.9rem
 }
 
 #main_body .routine_card .rc_inner .right {
