--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -218,28 +218,28 @@
   color:#666;
   font-size:0.9rem;
   letter-spacing:-0.02rem;
-  line-height:1.1rem;
+  line-height:1.2rem;
 }
 
 #main_body .routine_card .rc_inner p.title {
   font-weight:bold;
   color:#333;
-  margin-bottom:1rem;
-  line-height:1.2rem;
+  margin-bottom:0.5rem;
+  line-height:1.3rem;
   padding-left:0
 }
 
 #main_body .routine_card .rc_inner p.term {
-  background: url('../images/ico_mark.png') no-repeat 0 0/0.9rem 0.9rem
+  background: url('../images/ico_mark.png') no-repeat 0 0.2rem/0.9rem 0.9rem
 }
 #main_body .routine_card .rc_inner p.se_date {
- background: url('../images/ico_calendar02.png') no-repeat 0 0/0.9rem 0.9rem
+ background: url('../images/ico_calendar02.png') no-repeat 0 0.2rem/0.9rem 0.9rem
 }
 #main_body .routine_card .rc_inner p.alaram {
- background: url('../images/ico_alaram.png') no-repeat 0 0/0.9rem 0.9rem
+ background: url('../images/ico_alaram.png') no-repeat 0 0.2rem/0.9rem 0.9rem
 }
 #main_body .routine_card .rc_inner p.comment {
- background: url('../images/ico_comment.png') no-repeat 0 0/0.9rem 0.9rem
+ background: url('../images/ico_comment.png') no-repeat 0 0.2rem/0.9rem 0.9rem
 }
 
 #main_body .routine_card .rc_inner .right {
