--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -174,7 +174,7 @@
 
 #main_body .routine_card {
   background-color: #fff;
-  border: 1px solid #ececec;
+  border: 1px solid #ddd;
   border-radius: 1.5rem;
   padding: 1.5rem;
   text-align: left;
