--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -183,6 +183,7 @@
 }
 
 #main_body .routine_card .rc_inner {
+  position:relative;
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
@@ -237,12 +238,23 @@
   line-height:1.3rem;
   padding-left:0
 }
+
 #main_body .routine_card .rc_inner p.title span {
   vertical-align:middle;
 }
 
+#main_body .routine_card .rc_inner .setting {
+  height:2rem;
+  width:2rem;
+  position:absolute;
+  top:1rem;
+  right:1rem;
+  background: url('../images/ico_plus.png') no-repeat 0 0/100%
+}
 
-
+#main_body .routine_card .rc_inner .setting span {
+  display:none
+}
 #main_body .routine_card .rc_inner p.term {
   background: url('../images/ico_mark.png') no-repeat 0.1rem 0.1rem/0.9rem 0.9rem
 }
