--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -249,7 +249,7 @@
   position:absolute;
   top:1rem;
   right:1rem;
-  background: url('../images/ico_plus.png') no-repeat 0 0/100%
+  background: url('../images/ico_dot02.png') no-repeat 0 0/contain
 }
 
 #main_body .routine_card .setting span {
